--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-//    implementation project(':UnityExport')
+    implementation project(':UnityExport')
     //Remember to add unity jar from unity export as a module dependency and add the module below
     implementation project(':unity-classes')
 }
